<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.repair.lomasterapp.orders.NewOrderFragment">

    <data>

        <variable
            name="NewOrderViewModel"
            type="com.repair.lomasterapp.orders.NewOrderViewModel" />

    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView style="@style/AppScrollStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TextViewStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/tv_creating_new_order" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_info_cl_new_req"
                        style="@style/TextViewStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_green"
                        android:text="@string/client_info_new_req" />

                    <TextView
                        android:id="@+id/tv_fio_info_cl_new_req"
                        style="@style/TextViewNewOrderGrey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10" />

                    <TextView
                        android:id="@+id/tv_number_phone_info_cl_new_req"
                        style="@style/TextViewNewOrderGrey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10" />

                    <TextView
                        android:id="@+id/tv_email_info_cl_new_req"
                        style="@style/TextViewNewOrderGrey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10"
                        app:visibilityEMail="@{NewOrderViewModel}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_devices"
                        style="@style/TextViewStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10"
                        android:background="@color/color_green"
                        android:text="@string/title_device_req" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/et_typeDevice"
                            style="@style/TextViewNewOrderBlack"
                            android:hint="@string/type_device_req"
                            android:inputType="none"
                            app:clickTypeDevice="@{NewOrderViewModel}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/et_brand_device"
                            style="@style/TextViewNewOrderBlack"
                            android:hint="@string/brand_device_req"
                            android:inputType="textPersonName"
                            app:clickBrandDevice="@{NewOrderViewModel}"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/et_defect_device"
                            style="@style/TextViewNewOrderBlack"
                            android:hint="@string/defect_device_req"
                            app:clickDefectDevice="@{NewOrderViewModel}"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/et_equipment_device"
                            style="@style/TextViewNewOrderBlack"
                            android:hint="@string/complaction_device_req"
                            app:clickEquipmentDevice="@{NewOrderViewModel}"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                        <EditText
                            android:id="@+id/et_model_device"
                            style="@style/TextViewNewOrderGrey"
                            android:hint="@string/model_device_req"
                            android:inputType="text"
                            app:clickModelDevice="@{NewOrderViewModel}"
                            tools:ignore="TouchTargetSizeCheck" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_new_device_new_order"
                            style="@style/TextViewStyle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_view10"
                            android:layout_weight="1"
                            android:gravity="left|center_vertical"
                            android:text="@string/tv_new_device_new_order"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/font_small18" />

                        <Spinner
                            android:id="@+id/spinner_is_new_device"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/margin_view10"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/font_small18"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/et_serial_number_device"
                        style="@style/TextViewNewOrderGrey"
                        android:hint="@string/serial_number_device_req"
                        app:clickSerialNumber="@{NewOrderViewModel}"
                        tools:ignore="TouchTargetSizeCheck" />


                    <EditText
                        android:id="@+id/et_password_device"
                        style="@style/TextViewNewOrderGrey"
                        android:hint="@string/password_device_req"
                        android:inputType="text"
                        app:clickPassDevice="@{NewOrderViewModel}"
                        tools:ignore="TouchTargetSizeCheck" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_is_quiqly"
                        style="@style/TextViewNewOrderBlack"
                        android:layout_marginTop="@dimen/margin_view10"

                        android:hint="@string/is_quiqly_req"
                        app:clickUrgent="@{NewOrderViewModel}"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/tv_master_time"
                        style="@style/TextViewNewOrderBlack"
                        android:layout_marginTop="@dimen/margin_view10"
                        android:text="@string/master_call_time_req" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_view10"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_view10"
                            android:layout_weight="0.2"
                            android:scaleType="center"
                            app:srcCompat="@drawable/icon_vector_calendar" />

                        <TextView
                            android:id="@+id/tv_master_call_date"
                            style="@style/TextViewStyle2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/margin_view10"
                            android:layout_weight="0.4"
                            android:background="@drawable/time_view"
                            android:gravity="center_horizontal|center_vertical" />

                        <EditText
                            android:id="@+id/et_master_call_time"
                            style="@style/TextViewStyle2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:background="@drawable/time_view"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/time_hint"
                            android:inputType="time" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_view5"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/save_new_order"
                        style="@style/TextButtonStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_view10"
                        android:layout_marginBottom="@dimen/margin_view10"
                        android:background="@drawable/button_green_selector"
                        android:text="@string/btn_save"
                        />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </FrameLayout>
</layout>