<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.repair.lomasterapp.calendarDate.CalendarDateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/calendar_content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/calendar_content_Top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/calendar_content_End"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/calendar_content_Botton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/tv_calendar_master_visit"
            style="@style/TextViewCapsStyle"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tv_calendar_master_visit"
            android:textColor="@color/dark_green"
            app:layout_constraintBottom_toTopOf="@id/line1"
            app:layout_constraintEnd_toEndOf="@id/calendar_content_End"
            app:layout_constraintStart_toStartOf="@id/calendar_content_start"
            app:layout_constraintTop_toBottomOf="@id/calendar_content_Top" />

        <CalendarView
            android:id="@+id/calendarOrder"
            style="@android:style/Widget.DeviceDefault.CalendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/color_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />


        <Button
            android:id="@+id/btnChangeDateCalendar"
            style="@style/TextButtonStyleWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green_selector"
            android:text="@string/btn_change_date"
            app:layout_constraintEnd_toEndOf="@id/calendar_content_End"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/calendar_content_start"
            app:layout_constraintTop_toBottomOf="@id/calendar_content_Botton" />

        <Button
            android:id="@+id/btnBackCalendar"
            style="@style/TextButtonStyleBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white_selector"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="@id/calendar_content_End"
            app:layout_constraintStart_toStartOf="@id/calendar_content_start"
            app:layout_constraintTop_toBottomOf="@id/btnChangeDateCalendar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>